<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_btm_nav_home"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/selector_btm_nav_home"
        android:title="@string/main_btm_nav_home_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_main_btm_nav_search"
        android:enabled="true"
        android:icon="@drawable/selector_btm_nav_search"
        android:title="@string/main_btm_nav_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_main_btm_nav_upload"
        android:enabled="true"
        android:icon="@drawable/ic_btm_nav_upload"
        android:title="@string/main_btm_nav_upload"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_main_btm_nav_reels"
        android:enabled="true"
        android:icon="@drawable/selector_btm_nav_reels"
        android:title="@string/main_btm_nav_reels"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_main_btm_nav_profile"
        android:enabled="true"
        android:icon="@drawable/selector_btm_nav_profile"
        android:title="@string/main_btm_nav_profile"
        app:showAsAction="always" />

</menu>
