<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_user_posts_profile"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_btm_nav_profile_off_click"
        app:civ_border_color="@color/tv_story_red"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_user_posts_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/home_pheed_name"
        android:textColor="@color/black"
        android:textSize="@dimen/home_tv_pheed_name_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_user_posts_profile"
        app:layout_constraintStart_toEndOf="@+id/iv_user_posts_profile"
        app:layout_constraintTop_toTopOf="@+id/iv_user_posts_profile" />

    <ImageButton
        android:id="@+id/ibtn_user_posts_more"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="15dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_user_posts_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_user_posts_name"
        app:srcCompat="@drawable/ic_home_more" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_user_posts_picture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_user_posts_profile" />

    <ImageButton
        android:id="@+id/ibtn_user_posts_like"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vp_user_posts_picture"
        app:srcCompat="@drawable/ic_home_like" />

    <ImageButton
        android:id="@+id/ibtn_user_posts_comment"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/ibtn_user_posts_like"
        app:layout_constraintStart_toEndOf="@+id/ibtn_user_posts_like"
        app:layout_constraintTop_toTopOf="@+id/ibtn_user_posts_like"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_home_comment" />

    <ImageButton
        android:id="@+id/ibtn_user_posts_message"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/ibtn_user_posts_comment"
        app:layout_constraintStart_toEndOf="@+id/ibtn_user_posts_comment"
        app:layout_constraintTop_toTopOf="@+id/ibtn_user_posts_comment"
        app:srcCompat="@drawable/ic_home_message" />

    <ImageButton
        android:id="@+id/ibtn_user_posts_scrap"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="15dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ibtn_user_posts_message"
        app:srcCompat="@drawable/ic_home_scrap" />

    <TextView
        android:id="@+id/tv_user_posts_likeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/home_pheed_name"
        android:textColor="@color/black"
        android:textSize="@dimen/home_tv_pheed_detail_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/ibtn_user_posts_like"
        app:layout_constraintTop_toBottomOf="@+id/ibtn_user_posts_like" />

    <TextView
        android:id="@+id/tv_user_posts_like1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/home_pheed_like1"
        android:textSize="@dimen/home_tv_pheed_detail_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_user_posts_likeName"
        app:layout_constraintStart_toEndOf="@+id/tv_user_posts_likeName"
        app:layout_constraintTop_toTopOf="@+id/tv_user_posts_likeName" />

    <TextView
        android:id="@+id/tv_user_posts_like2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/home_pheed_like2"
        android:textColor="@color/black"
        android:textSize="@dimen/home_tv_pheed_detail_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_user_posts_like1"
        app:layout_constraintStart_toEndOf="@+id/tv_user_posts_like1"
        app:layout_constraintTop_toTopOf="@+id/tv_user_posts_like1" />

    <TextView
        android:id="@+id/tv_user_posts_like3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_pheed_like3"
        android:textSize="@dimen/home_tv_pheed_detail_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_user_posts_like2"
        app:layout_constraintStart_toEndOf="@+id/tv_user_posts_like2"
        app:layout_constraintTop_toTopOf="@+id/tv_user_posts_like2" />

    <TextView
        android:id="@+id/tv_user_posts_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/home_pheed_name"
        android:textColor="@color/black"
        android:textSize="@dimen/home_tv_pheed_detail_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_user_posts_likeName"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_posts_likeName" />

    <TextView
        android:id="@+id/tv_user_posts_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="15dp"
        android:maxLines="1"
        android:text="@string/home_pheed_detail"
        android:textSize="@dimen/home_tv_pheed_detail_size"
        app:layout_constraintEnd_toStartOf="@+id/ibtn_user_posts_scrap"
        app:layout_constraintStart_toEndOf="@+id/tv_user_posts_name2"
        app:layout_constraintTop_toTopOf="@+id/tv_user_posts_name2" />

    <TextView
        android:id="@+id/tv_user_posts_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="댓글 모두 보기"
        android:textSize="@dimen/home_tv_pheed_detail_size"
        app:layout_constraintStart_toStartOf="@+id/tv_user_posts_name2"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_posts_name2" />

    <TextView
        android:id="@+id/tv_user_posts_pageCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/home_pheed_border_black_rectangle"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vp_user_posts_picture" />

    <TextView
        android:id="@+id/tv_user_posts_when"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="몇일전"
        android:textSize="@dimen/home_tv_pheed_detail_size"
        app:layout_constraintStart_toStartOf="@+id/tv_user_posts_comment"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_posts_comment" />
</androidx.constraintlayout.widget.ConstraintLayout>